--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
+    "cmake:build": "cmake -G \"Visual Studio 17 2022\" -S app -B app/build && cmake --build app/build", 
+    "build": "npm run typecheck && electron-vite build", 
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
