--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
       "request": "launch",
       "name": "CLI Debug",
       "program": "${workspaceFolder}/app/build/redeskcli.exe", 
-      "args": [],
+      "args": ["--join"],
       "cwd": "${workspaceFolder}"
     }
   ],
